--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="pod_header_margin_top">4dp</dimen>
     <dimen name="pod_tab_layout_margin_top">8dp</dimen>
     <dimen name="mars_image_height">400dp</dimen>
+    <dimen name="video_frame_layout_padding_horizontal">32dp</dimen>
+    <dimen name="button_show_video_margin_top">24dp</dimen>
 </resources>
