--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,8 @@
         <item name="bottomSheetDialogHeaderTextColor">@color/black</item>
         <item name="imageButtonColor">@color/black</item>
     </style>
+
+    <style name="AppTheme.SplashTheme">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
 </resources>
